gccida/c2/init_cumulative_args
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_cumulative_args/src/i386.c:2017:12: error: expected expression
*( _OWORD *)&cum->sse_words = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_cumulative_args/src/i386.c:2017:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cum->sse_words = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_cumulative_args/src/i386.c:2018:12: error: expected expression
*( _OWORD *)&cum->words = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_cumulative_args/src/i386.c:2018:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cum->words = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_cumulative_args/src/i386.c:2051:13: error: invalid operands to binary expression ('struct rtx_def' and 'tree [51]')
if ( v11[2] != *( &global_trees + 27) ) 
     ~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_cumulative_args/src/obj/i386.o] Error 1
